[gd_scene load_steps=2 format=3 uid="uid://cbnahj6ah2cfu"]

[ext_resource type="Script" uid="uid://cvwtof5718chd" path="res://Scripts/ToothSlot.gd" id="1_bnnkf"]

[node name="ToothSlot" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_bnnkf")

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ToothIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TattooContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ToothLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 48.0
